Avoid invisible text during font loading

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
   url('../assets/fonts/Calibre/Calibre-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -16,7 +16,7 @@
   url('../assets/fonts/Calibre/Calibre-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -25,7 +25,7 @@
   url('../assets/fonts/Calibre/Calibre-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -34,7 +34,7 @@
   url('../assets/fonts/Calibre/Calibre-RegularItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -43,7 +43,7 @@
   url('../assets/fonts/Calibre/Calibre-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -52,7 +52,7 @@
   url('../assets/fonts/Calibre/Calibre-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -61,7 +61,7 @@
   url('../assets/fonts/Calibre/Calibre-Semibold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Calibre';
@@ -70,7 +70,7 @@
   url('../assets/fonts/Calibre/Calibre-SemiboldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -80,7 +80,7 @@
   url('../assets/fonts/SFMono/SFMono-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Mono';
@@ -89,7 +89,7 @@
   url('../assets/fonts/SFMono/SFMono-RegularItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Mono';
@@ -98,7 +98,7 @@
   url('../assets/fonts/SFMono/SFMono-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Mono';
@@ -107,7 +107,7 @@
   url('../assets/fonts/SFMono/SFMono-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Mono';
@@ -116,7 +116,7 @@
   url('../assets/fonts/SFMono/SFMono-Semibold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Mono';
@@ -125,7 +125,7 @@
   url('../assets/fonts/SFMono/SFMono-SemiboldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
 }
 
 html {
